--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -61,9 +61,9 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		\bf{Abbreviation} & \bf{Explanation} \tabularnewline
 		\hline
-		API		 & \underline{A}plication \underline{P}rogramming \underline{I}nterface. \tabularnewline
+		API		 & \underline{A}pplication \underline{P}rogramming \underline{I}nterface. \tabularnewline
 		\hline
-		APSP		 & \underline{A}ll \underline{P}airs \underline{S}hortest \underline{Path}. \tabularnewline
+		APSP		 & \underline{A}ll \underline{P}airs \underline{S}hortest \underline{P}ath \cite[pp. 309-320]{Erickson2019}. \tabularnewline
 		\hline
 		CLI              & \underline{C}ommand \underline{L}ine \underline{I}nterface. \tabularnewline
 		\hline
@@ -71,11 +71,11 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		ILL              & \underline{I}nstitut \underline{L}aue-\underline{L}angevin, Grenoble, France. \tabularnewline
 		\hline
-		SO(n)            & \underline{S}pecial \underline{O}rthogonal Group in \underline{n} dimensions. \tabularnewline
+		SO(n)            & \underline{S}pecial \underline{O}rthogonal Group in \underline{n} dimensions \cite[pp. 849-851]{Arfken2013}. \tabularnewline
 		\hline
-		SSSP		 & \underline{S}ingle \underline{S}ource \underline{S}hortest \underline{Path}. \tabularnewline
+		SSSP		 & \underline{S}ingle \underline{S}ource \underline{S}hortest \underline{Path} \cite[pp. 273-297]{Erickson2019}. \tabularnewline
 		\hline
-		TAS              & \underline{T}riple \underline{A}xis \underline{S}pectrometer. \tabularnewline
+		TAS              & \underline{T}riple \underline{A}xis \underline{S}pectrometer \cite{Shirane2002}. \tabularnewline
 		\hline
 		UB method        & Not technically an abbreviation, but the product of two matrices \tabularnewline
 		                          & which also give the name to the standard method for crystalographic \tabularnewline
