--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1012,6 +1012,7 @@
 	author = {C. B. Barber},
 	year = {1995-2020},
 	url = "http://www.qhull.org/",
+	github = "https://github.com/qhull/qhull",
 	OPThowpublished = "\url{http://www.qhull.org/}",
 	note = "[Online; accessed 7-July-2021]",
 }
@@ -1030,11 +1031,24 @@
 
 @misc
 {
+	web_opencv,
+	title = {{OpenCV C++ Library (Software)}},
+	author = {{Intel Corporation and various authors}},
+	year = {2000-2021},
+	url = "https://opencv.org/",
+	github = "https://github.com/opencv/opencv",
+	note = "[Online; accessed 11-September-2021]",
+}
+
+
+@misc
+{
 	web_boost,
 	title = {{Boost C++ Libraries (Software)}},
 	author = {{Various Authors}},
 	year = {2004-2021},
 	url = "https://www.boost.org/",
+	github = "https://github.com/boostorg",
 	OPThowpublished = "\url{https://www.boost.org/}",
 	note = "[Online; accessed 3-July-2021]",
 }
@@ -1047,6 +1061,7 @@
 	author = {{Intel Corporation}},
 	year = {2008-2010},
 	url = "https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm",
+	github = "https://github.com/boostorg/polygon/",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm}",
 	note = "[Online; accessed 5-July-2021]",
 }
@@ -1059,6 +1074,7 @@
 	author = {Gennadiy Rozental and Raffi Enficiaud},
 	year = {2001-2020},
 	url = "https://www.boost.org/doc/libs/1_77_0/libs/test/doc/html/index.html",
+	github = "https://github.com/boostorg/test",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_77_0/libs/test/doc/html/index.html}",
 	note = "[Online; accessed 23-August-2021]",
 }
@@ -1071,6 +1087,7 @@
 	author = {Marcin Kalicinski and Sebastian Redl},
 	year = {2008-2013},
 	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/property_tree.html",
+	github = "https://github.com/boostorg/property_tree",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/property_tree.html}",
 	note = "[Online; accessed 3-August-2021]",
 }
@@ -1083,6 +1100,7 @@
 	author = {Olaf Krzikalla and Ion Gaztanaga},
 	year = {2005-2015},
 	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive.html",
+	github = "https://github.com/boostorg/intrusive",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/intrusive.html}",
 	note = "[Online; accessed 5-July-2021]",
 }
@@ -1095,6 +1113,7 @@
 	author = {Barend Gehrels and Bruno Lalande and Mateusz Loskot and Adam Wulkiewicz and Menelaos Karavelas and Vissarion Fisikopoulos},
 	year = {2009-2021},
 	url = "https://www.boost.org/doc/libs/1_76_0/libs/geometry/doc/html/index.html",
+	github = "https://github.com/boostorg/geometry",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/geometry/doc/html/index.html}",
 	note = "[Online; accessed 13-August-2021]",
 }
@@ -1107,6 +1126,7 @@
 	author = {Douglas Gregor and Frank Mori Hess},
 	year = {2001-2009},
 	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/signals2.html",
+	github = "https://github.com/boostorg/signals2",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/signals2.html}",
 	note = "[Online; accessed 3-July-2021]",
 }
@@ -1119,6 +1139,7 @@
 	author = {Christopher M. Kohlhoff},
 	year = {2003-2021},
 	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio.html",
+	github = "https://github.com/boostorg/asio",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/boost_asio.html}",
 	note = "[Online; accessed 3-July-2021]",
 }
@@ -1179,6 +1200,7 @@
 	author = {{Python Software Foundation}},
 	year = {2001-2021},
 	url = "https://www.python.org/",
+	github = "https://github.com/python",
 	OPThowpublished = "\url{https://www.python.org/}",
 	note = "[Online; accessed 27-July-2021]",
 }
@@ -1191,6 +1213,7 @@
 	author = {{The Matplotlib development team}},
 	year = {2002-2021},
 	url = "https://matplotlib.org/",
+	github = "https://github.com/matplotlib/matplotlib",
 	OPThowpublished = "\url{https://matplotlib.org/}",
 	note = "[Online; accessed 2-August-2021]",
 }
@@ -1215,6 +1238,7 @@
 	author = {Georg Brandl and Enrico Faulhaber and Christian Felder and Jens Kr\"uger and Alexander Lenz and Bj\"orn Pedersen},
 	year = {2010 - 2021},
 	url = "https://nicos-controls.org/",
+	github = "https://github.com/mlz-ictrl/nicos",
 	OPThowpublished = "\url{https://nicos-controls.org/}",
 	note = "[Online; accessed 27-July-2021]",
 }
@@ -1227,6 +1251,7 @@
 	author = {{The Qt Company}},
 	year = {2021},
 	url = "https://www.qt.io/",
+	github = "https://github.com/qt",
 	OPThowpublished = "\url{https://www.qt.io/}",
 	note = "[Online; accessed 31-July-2021]",
 }
@@ -1274,6 +1299,7 @@
 	author = {Emanuel Eichhammer},
 	year = {2011 - 2021},
 	url = "https://www.qcustomplot.com/",
+	github = "https://gitlab.com/DerManu/QCustomPlot",
 	OPThowpublished = "\url{https://www.qcustomplot.com/}",
 	note = "[Online; accessed 31-July-2021]",
 }
@@ -1444,6 +1470,17 @@
 	year = {2015-2016},
 	url = "http://learnwebgl.brown37.net/08_projections/projections_viewport.html",
 	note = "[Online; accessed 23-August-2021]"
+}
+
+
+@misc
+{
+	web_bsp_faq,
+	author = {Bretton Wade},
+	title = {{BSP FAQ}},
+	year = {1995-2001},
+	url = "https://www.opengl.org/archives/resources/code/samples/bspfaq/index.html",
+	note = "[Online; accessed 11-September-2021]"
 }
 
 
