--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -217,7 +217,8 @@ These basis vectors are usually chosen along two orientation Bragg reflections a
 in the orthogonal lab system, i.e. they are
 pre-multiplied by $B$.
 For $U$ to be a rotation matrix, these basis vectors are normalised using, for instance, the 
-Gram-Schmidt algorithm \cite[p. 744]{Arens2015} or QR decomposition \cite[pp. 269-272]{Scarpino2011}.
+Gram-Schmidt algorithm \cite[p. 744]{Arens2015} \cite[pp. 269-270]{Arfken2013} or 
+QR decomposition \cite[pp. 269-272]{Scarpino2011}.
 
 In summary, a coordinate point $\left|Q_{\mathrm{rlu}}\right>$, which is given in relative lattice 
 units of the reciprocal crystal, 
