--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -227,7 +227,7 @@ This example graph will also serve for the algorithm demonstrations in the follo
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width = 1 \textwidth]{figures/example_graph}
+		\includegraphics[width = 0.9 \textwidth, trim=1cm 1cm 1cm 1cm, clip]{figures/example_graph}
 	\end{center}
 	\caption[Example graph.]{
 		Example of a directed, weighted graph containing five vertices, $v_1$, $v_2$, ..., $v_5$.
@@ -606,6 +606,20 @@ A $k$-d tree of $n$ objects can be created with an upper bound in time complexit
 $\mathcal{O}\left( n \log_2 n \right)$ and has a storage complexity linear in $n$,
 its range query time lies in $\mathcal{O}\left( n^{1-1/k} + r \right)$, where $r$ is the number of
 objects that are found by the query \cite[p. 105]{Berg2008}.
+
+\begin{figure}[h]
+	\begin{center}
+		\begin{minipage}{0.4 \textwidth}
+			\includegraphics[width = 1 \textwidth]{figures/example_kd_plane}
+		\end{minipage}
+		\hspace{0.5cm}
+		\begin{minipage}{0.55 \textwidth}
+			\includegraphics[width = 1 \textwidth, trim=1cm 1cm 1cm 1cm, clip]{figures/example_kd}
+		\end{minipage}
+	\end{center}
+	\caption[Example kd trees.]{
+		\label{fig:example_kdtree}}
+\end{figure}
 
 
 \paragraph{R tree}
