--- a/tex/paths.tex
+++ b/tex/paths.tex
@@ -273,7 +273,7 @@ The two tasks comprise these following steps:
 			in a graph structure, as in \cite[p. 163]{Berg2008}.
 			For quick access to the closest positions, the positions of the
 			Voronoi vertices are additionally saved in a spatial index tree such as a 
-			k-d tree \cite{TODO}, an R-tree \cite{TODO} or a BSP tree. 
+			k-d tree or an R tree.
 			Please refer to chapter \ref{sec:indextrees} for a description of these data types.
 			Such an approach is, for instance, used in the work by 
 			Hwang \textit{et al}. \cite{Hwang2003}.
