--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -560,7 +560,7 @@ The shortest path is thus $v_1$, $v_2$, $v_3$, $v_5$.
 	\end{itemize}
 	\end{minipage}
 
-	\caption[Example for Dijkstra's algorithm]{
+	\caption[Example for Dijkstra's algorithm.]{
 	Example runs of Dijkstra's algorithm (left column) and its modified version (right column)
 	for the graph shown in Fig. \ref{fig:example_graph} and start vertex $v_1$.
 	Note that from iteration 2 on, both variants have converged to the same results.}
