--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -14,12 +14,15 @@ Additionally, the main software repository is available here:
 \url{https://code.ill.fr/scientific-software/takin/paths},
 a mirror of the repository can be found here: 
 \url{https://github.com/tweber-ill/ill_mirror-takin2-paths}.
+It has furthermore been archived at this address:
+\url{https://archive.softwareheritage.org/browse/origin/?origin_url=https://code.ill.fr/scientific-software/takin/paths}.
 
-\vspace{0.5cm}
+\vspace{0.75cm}
 
 Up-to-date errata for this work will be published on-line under the DOI 
 \href{https://doi.org/10.5281/zenodo.5092159}{10.5281/zenodo.5092159}.
 The source of the thesis text can be found in the repository:
 \url{https://code.ill.fr/tweber/thesis}, and is mirrored in:
 \url{https://github.com/tweber-ill/ill_mirror-thesis}.
-
+The archived copy of the repository can be found here:
+\url{https://archive.softwareheritage.org/browse/origin/?origin_url=https://code.ill.fr/tweber/thesis}.
