--- a/tex/gl.tex
+++ b/tex/gl.tex
@@ -355,7 +355,7 @@ problem.
 		         $s$ & $z$ scaling        &              $2$ &               $1$ \tabularnewline
 		\hline
 	\end{tabular}
-	\caption[Projection matrix constants]{
+	\caption[Projection matrix constants.]{
 		Constant values for the perspective and orthogonal projection matrices used in the
 		\textit{OpenGL} \cite{web_OpenGL} and \textit{Vulkan} \cite{web_Vulkan} graphics libraries.}
 	\label{tab:gl_constants}
