--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -47,7 +47,7 @@ Table \ref{tab:notation} gives details on this notation.
 		$\left(a^{i}_{\;j}\right) \,=\, \left| x \right> \left< y \right| \,=\, x^i y_j$ & A tensor/outer product. \tabularnewline
 		\hline
 	\end{tabular}
-	\caption[Symbol notation]{Notation of used symbols.}
+	\caption[Symbol notation.]{Notation of used symbols.}
 	\label{tab:notation}
 \end{table}
 
@@ -84,6 +84,6 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		                          & coordinate calculation in spectrometers \cite{Lumsden2005}. \tabularnewline
 		\hline
 	\end{tabular}
-	\caption[Abbreviations]{Abbreviations used in this work.}
+	\caption[Abbreviations.]{Abbreviations used in this work.}
 	\label{tab:abbreviations}
 \end{table}
