started with foreword

--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -8,21 +8,40 @@
 \chapter{Online Resources and Future Errata}
 \label{ch:online}
 
-The latest version of the software of this work can be found under the DOI 
-\href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}.
-Additionally, the main software repository is available here: 
+\paragraph{Software source code}
+The latest version the software that has been developed 
+as part of this work has the DOI (digital object identifier)
+\href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}
+and can be found under the URL \url{https://doi.org/10.5281/zenodo.4625649}.
+Additionally, the main software's development repository is available here: 
 \url{https://code.ill.fr/scientific-software/takin/paths},
 a mirror of the repository can be found here: 
 \url{https://github.com/tweber-ill/ill_mirror-takin2-paths}.
 It has furthermore been archived at this address:
 \url{https://archive.softwareheritage.org/browse/origin/?origin_url=https://code.ill.fr/scientific-software/takin/paths}.
 
-\vspace{0.75cm}
+The latest version of the software's source code archive (ver-0.9) bears the 
+filename ``taspaths-sep21b.tar.xz'' and has the SHA-256 \cite{web_sha256sum} 
+checksum:
 
-Up-to-date errata for this work will be published on-line under the DOI 
-\href{https://doi.org/10.5281/zenodo.5092159}{10.5281/zenodo.5092159}.
+\begin{centering}
+158a5d422cde338f\\
+ca04a9a9471cd23e\\
+154109926f33e147\\
+50bc23cb2ccd55c0.\\
+\end{centering}
+
+
+\paragraph{Thesis source code}
 The source of the thesis text can be found in the repository:
 \url{https://code.ill.fr/tweber/thesis}, and is mirrored in:
 \url{https://github.com/tweber-ill/ill_mirror-thesis}.
 The archived copy of the repository can be found here:
 \url{https://archive.softwareheritage.org/browse/origin/?origin_url=https://code.ill.fr/tweber/thesis}.
+
+
+%\vspace{0.75cm}
+\paragraph{Errata}
+Up-to-date errata for this work will be published via the DOI
+\href{https://doi.org/10.5281/zenodo.5092159}{10.5281/zenodo.5092159}
+and can be found online under the URL \url{https://doi.org/10.5281/zenodo.5092159}.
