--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1493,6 +1493,18 @@
 	note = "[Online; accessed 23-August-2021]"
 }
 
+
+@misc
+{
+	web_sha256sum,
+	author = {Ulrich Drepper and Scott Miller and David Madore},
+	title = {{GNU Coreutils, sha256sum (Software)}},
+	year = {1994-2020},
+	url = "https://www.gnu.org/software/coreutils/manual/html_node/sha2-utilities#sha2-utilities",
+	note = "[Online; accessed 13-September-2021]"
+}
+
+
 % -----------------------------------------------------------------------------
 
 
