--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -64,7 +64,7 @@
 %\addcontentsline{toc}{part}{Front matter} 
 \input{tex/abstract.tex}
 \input{tex/acknowledgements.tex}
-
+\input{tex/foreword.tex}
 
 %\part{Main part}
 \input{tex/intro.tex}
